#main width to 100%, working on mobile width fix.

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ td {
 
 #main {
   margin:0 auto;
-  width:90%;
+  width:100%;
 }
 
 #top {
